# CHESS_ENGINE

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_rl.cpp
src/AI/: Agent.h  AgentConfig.cpp  AgentConfig.h  AgentRegistry.cpp  AgentRegistry.h  CaptureAI.cpp  CaptureAI.h  CaptureDefenseAI.cpp  CaptureDefenseAI.h  DecisionNode.h  DecisionTreeEngine.cpp  DecisionTreeEngine.h  DefenseAI.cpp  DefenseAI.h  DefenseCaptureAI.cpp  DefenseCaptureAI.h  HumanAgent.cpp  HumanAgent.h  Node.cpp  Node.h  RLAgentAI.cpp  RLAgentAI.h  RandomAI.cpp  RandomAI.h  Tree.cpp  Tree.h
src/Analysis/: ChessAnalyzer.cpp  ChessAnalyzer.h
src/Assets/: alfil.gltf  caballo.gltf  dama.gltf  peon.gltf  reina.gltf  rey.gltf  rook.gltf  torre.gltf
src/Assets/Environment/: Silla.glb  basic_room_table.gltf
src/Core/: BoardPicker3D.cpp  BoardPicker3D.h  Camera3D.cpp  Camera3D.h  GameTime.cpp  GameTime.h  InputConsole.cpp  InputConsole.h  InputKeyboard.cpp  InputKeyboard.h  InputMouse.cpp  InputMouse.h  PiecePicker3D.cpp  PiecePicker3D.h  SceneConstants.h
src/Environment/: BasicRoom3D.cpp  BasicRoom3D.h  BasicRoomConstants.h  BasicWall3D.cpp  BasicWall3D.h  Chair3D.cpp  Chair3D.h  Environment3D.h  EnvironmentObject3D.cpp  EnvironmentObject3D.h  PlaneMeshBuilder.cpp  PlaneMeshBuilder.h  SceneRenderer3D.cpp  SceneRenderer3D.h  Table3D.cpp  Table3D.h
src/Game/: Agent.h  BishopMoves.h  ChessGame.cpp  ChessGame.h  ChessRules.cpp  ChessRules.h  ChessTypes.h  GameState.cpp  GameState.h  HumanAgent.cpp  HumanAgent.h  InitialPosition.h  KingMoves.h  KnightMoves.h  Move.h  MoveExecutor.cpp  MoveExecutor.h  MoveFilter.cpp  MoveFilter.h  MoveGenerator.cpp  MoveGenerator.h  PawnMoves.cpp  PawnMoves.h  RookMoves.h
src/Graphics/: BoardView.h  ChessBoardMesh3D.cpp  ChessBoardMesh3D.h  ChessBoardRenderer.cpp  ChessBoardRenderer.h  ChessBoardRenderer3D.cpp  ChessBoardRenderer3D.h  ChessPieceMesh3D.cpp  ChessPieceMesh3D.h  ChessPieceRenderer.cpp  ChessPieceRenderer.h  ChessPieceRenderer3D.cpp  ChessPieceRenderer3D.h  ChessRenderer.cpp  ChessRenderer.h  ChessRenderer3D.cpp  ChessRenderer3D.h  HighlightRenderer.cpp  HighlightRenderer.h  HighlightRenderer3D.cpp  HighlightRenderer3D.h  LoadGLB.cpp  LoadGLB.h  Material3D.cpp  Material3D.h  Mesh3D.cpp  Mesh3D.h  PromotionRenderer.cpp  PromotionRenderer.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Shader3D.cpp  Shader3D.h  Texture.cpp  Texture.h  Transform3D.cpp  (+2 more)
src/Graphics/Shaders/: basic.vert  basic_3d.frag  basic_3d.vert  basic_piece_3d.frag  basic_piece_3d.vert  caja_hdr.frag  caja_hdr.vert  cupula_hdr.frag  cupula_hdr.vert  dome_hdr.frag  dome_hdr.vert  ground_hdr.frag  ground_hdr.vert  texture.frag  texture.vert
src/HDRI/: CajaConstants3D.h  CajaMesh3D.cpp  CajaMesh3D.h  CajaMeshBuilder.cpp  CajaMeshBuilder.h  CajaRenderer3D.cpp  CajaRenderer3D.h  CupulaConstants3D.h  CupulaMesh3D.cpp  CupulaMesh3D.h  CupulaMeshBuilder.cpp  CupulaMeshBuilder.h  CupulaRenderer3D.cpp  CupulaRenderer3D.h  DomeConstants3D.h  DomeMesh3D.cpp  DomeMesh3D.h  DomeMeshBuilder.cpp  DomeMeshBuilder.h  DomeRenderer3D.cpp  DomeRenderer3D.h  GroundDiskMesh3D.cpp  GroundDiskMesh3D.h  HDRICajaShader.cpp  HDRICajaShader.h  HDRICupulaShader.cpp  HDRICupulaShader.h  HDRIDomeShader.cpp  HDRIDomeShader.h  HDRIGroundShader.cpp  HDRIGroundShader.h  HDRITexture.cpp  HDRITexture.h
src/RL/: DecisionDL.cpp  DecisionDL.h  FeatureEngineering.cpp  FeatureEngineering.h  InputRandom.cpp  InputRandom.h  RLAnalyzer.cpp  RLAnalyzer.h  RLSystem.cpp  RLSystem.h  RLTrainer.cpp  RLTrainer.h  RewardSystem.cpp  RewardSystem.h
src/RL/models/: player1.model  player2.model
src/Screens/: Game3DScreen.cpp  Game3DScreen.h  GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h  ScreenManager.cpp  ScreenManager.h  SplashScreen.cpp  SplashScreen.h  Window.cpp  Window.h
src/UI/: Button.cpp  Button.h  UIConstants.h
